<?xml version="1.0"?>
<package format="2">
  <name>hero_chassis_controller</name>
  <version>0.1.0</version>
  <description>A controller package for the hero chassis.</description>
  <maintainer email="liaoqiayuan@gmail.com">Qiayuan Liao</maintainer>
  <license>BSD</license>
  <author email="liaoqiayuan@gmail.com">Qiayuan Liao</author>

  <!-- buildtool_depend: dependencies of the build process -->
  <buildtool_depend>catkin</buildtool_depend>
  <!-- build_depend: dependencies only used in source files -->
  <build_depend>boost</build_depend>
  <!-- depend: build, export, and execution dependency -->
  <depend>eigen</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>control_toolbox</depend>
  <depend>tf</depend>
  <depend>hardware_interface</depend>
  <depend>controller_interface</depend>
  <depend>controller_manager</depend>
  <depend>realtime_tools</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>pluginlib</depend>
  <test_depend>rostest</test_depend>
  <depend>rm_description</depend>
  <depend>forward_command_controller</depend>
  
    <export>
  <controller_interface plugin="${prefix}/hero_chassis_controller_plugin.xml"/>
  </export>
</package>
